scss/_component.header.scss
.header {
  @include grid-container;
}

.header__nav,
.header__brand {
  padding-top: $space-m;
  margin: 0;
}

.header__brand {
  @include grid-column(2);

  @include grid-media($neat-grid-medium) {
    @include grid-column(3);
  }

  @include grid-media($neat-grid-large) {
    @include grid-column(4);
  }
}

.header__nav {
  @include grid-column(2);
  @include grid-push(3);

  @include grid-media($neat-grid-medium) {
    @include grid-column(2);
    @include grid-push(6);
  }

  @include grid-media($neat-grid-large) {
    @include grid-column(3);
    @include grid-push(9);
  }
}

.header__logo-link {
  @extend %link-major;
  display: block;
  line-height: 1;
  color: color('text');

  &:hover,
  &:active,
  &:focus {
    color: color('text');
  }
}

